--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ section {
 section h1,
 section p {
 	text-align: center;
-	color: #454545;
+	color: #f1f1f1;
 }
 section h1 {
 	font: 32px 'Open Sans';
